{
  "version": 4,
  "terraform_version": "1.15.7",
  "serial": 53,
  "lineage": "6ad68e91-2f33-b9b6-851d-c74d278d6770",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway",
      "name": "demo_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "amazon_side_asn": 64512,
            "arn": "arn:aws:ec2:us-east-1:247518864460:transit-gateway/tgw-068ecb0bf77ad827c",
            "association_default_route_table_id": "tgw-rtb-00948978f14993bcd",
            "auto_accept_shared_attachments": "disable",
            "default_route_table_association": "enable",
            "default_route_table_propagation": "enable",
            "description": "TG for peering two VPCs",
            "dns_support": "enable",
            "encryption_support": "disable",
            "id": "tgw-068ecb0bf77ad827c",
            "multicast_support": "disable",
            "owner_id": "247518864460",
            "propagation_default_route_table_id": "tgw-rtb-00948978f14993bcd",
            "region": "us-east-1",
            "security_group_referencing_support": "disable",
            "tags": {
              "Name": "DemoTG"
            },
            "tags_all": {
              "Name": "DemoTG"
            },
            "vpn_ecmp_support": "enable"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "first_vpc_tga",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "disable",
            "arn": "arn:aws:ec2:us-east-1:247518864460:transit-gateway-attachment/tgw-attach-0b607d57516fe707a",
            "dns_support": "enable",
            "id": "tgw-attach-0b607d57516fe707a",
            "ipv6_support": "disable",
            "region": "us-east-1",
            "security_group_referencing_support": "enable",
            "subnet_ids": [
              "subnet-01eccc291ed77f134"
            ],
            "transit_gateway_default_route_table_association": true,
            "transit_gateway_default_route_table_propagation": true,
            "transit_gateway_id": "tgw-068ecb0bf77ad827c",
            "vpc_id": "vpc-097601cf2c125ffa5",
            "vpc_owner_id": "247518864460"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_ec2_transit_gateway.demo_tg",
            "aws_subnet.public_subnet_first_vpc",
            "aws_vpc.first_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "second_vpc_tga",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "disable",
            "arn": "arn:aws:ec2:us-east-1:247518864460:transit-gateway-attachment/tgw-attach-098e69d716c05f2e7",
            "dns_support": "enable",
            "id": "tgw-attach-098e69d716c05f2e7",
            "ipv6_support": "disable",
            "region": "us-east-1",
            "security_group_referencing_support": "enable",
            "subnet_ids": [
              "subnet-0569ef69fdcc67e9d"
            ],
            "transit_gateway_default_route_table_association": true,
            "transit_gateway_default_route_table_propagation": true,
            "transit_gateway_id": "tgw-068ecb0bf77ad827c",
            "vpc_id": "vpc-00e2b950650f66e11",
            "vpc_owner_id": "247518864460"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_ec2_transit_gateway.demo_tg",
            "aws_subnet.private_subnet_second_vpc",
            "aws_vpc.second_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:247518864460:internet-gateway/igw-0d89b2a583cc477c6",
            "id": "igw-0d89b2a583cc477c6",
            "owner_id": "247518864460",
            "region": "us-east-1",
            "tags": {
              "Name": "IGW"
            },
            "tags_all": {
              "Name": "IGW"
            },
            "vpc_id": "vpc-097601cf2c125ffa5"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "247518864460",
            "id": "igw-0d89b2a583cc477c6",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.first_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "first_vpc_route_to_second_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "20.0.0.0/24",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0912ff53f462874161450919668",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "odb_network_arn": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-0912ff53f46287416",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "tgw-068ecb0bf77ad827c",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "247518864460",
            "destination_cidr_block": "20.0.0.0/24",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-0912ff53f46287416"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.demo_tg",
            "aws_ec2_transit_gateway_vpc_attachment.second_vpc_tga",
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.private_subnet_second_vpc",
            "aws_vpc.first_vpc",
            "aws_vpc.second_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "second_vpc_route_to_first_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.0.0.0/24",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0138b6f5a9022fa5b3482919157",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "odb_network_arn": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-0138b6f5a9022fa5b",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "tgw-068ecb0bf77ad827c",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "247518864460",
            "destination_cidr_block": "10.0.0.0/24",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-0138b6f5a9022fa5b"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.demo_tg",
            "aws_ec2_transit_gateway_vpc_attachment.first_vpc_tga",
            "aws_subnet.public_subnet_first_vpc",
            "aws_vpc.first_vpc",
            "aws_vpc.second_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:247518864460:route-table/rtb-0912ff53f46287416",
            "id": "rtb-0912ff53f46287416",
            "owner_id": "247518864460",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d89b2a583cc477c6",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PublicRT"
            },
            "tags_all": {
              "Name": "PublicRT"
            },
            "timeouts": null,
            "vpc_id": "vpc-097601cf2c125ffa5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "247518864460",
            "id": "rtb-0912ff53f46287416",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.first_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05dfc960c18ef0abf",
            "region": "us-east-1",
            "route_table_id": "rtb-0912ff53f46287416",
            "subnet_id": "subnet-01eccc291ed77f134"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "247518864460",
            "id": "rtbassoc-05dfc960c18ef0abf",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet_first_vpc",
            "aws_vpc.first_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:247518864460:security-group/sg-02892a243e658daa5",
            "description": "whizlabssecuritygroup",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02892a243e658daa5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "whiz_sg",
            "name_prefix": "",
            "owner_id": "247518864460",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "whiz_sg"
            },
            "tags_all": {
              "Name": "whiz_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-097601cf2c125ffa5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "247518864460",
            "id": "sg-02892a243e658daa5",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.first_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "privateec2sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:247518864460:security-group/sg-0b53fc37c2e634c6a",
            "description": "whizlabssecuritygroup",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b53fc37c2e634c6a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "whiz_sg2",
            "name_prefix": "",
            "owner_id": "247518864460",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "whiz_sg"
            },
            "tags_all": {
              "Name": "whiz_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-00e2b950650f66e11"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "247518864460",
            "id": "sg-0b53fc37c2e634c6a",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.second_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_second_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:247518864460:subnet/subnet-0569ef69fdcc67e9d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "20.0.0.0/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0569ef69fdcc67e9d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "247518864460",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "vpc_id": "vpc-00e2b950650f66e11"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "247518864460",
            "id": "subnet-0569ef69fdcc67e9d",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.second_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_first_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:247518864460:subnet/subnet-01eccc291ed77f134",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01eccc291ed77f134",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "247518864460",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "Public_subnet_first_VPC"
            },
            "tags_all": {
              "Name": "Public_subnet_first_VPC"
            },
            "vpc_id": "vpc-097601cf2c125ffa5"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "247518864460",
            "id": "subnet-01eccc291ed77f134",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.first_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "first_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:247518864460:vpc/vpc-097601cf2c125ffa5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/24",
            "default_network_acl_id": "acl-09095102fb490d433",
            "default_route_table_id": "rtb-08a638929ef053aff",
            "default_security_group_id": "sg-0ba57de4e8bf9d969",
            "dhcp_options_id": "dopt-0bed20ffd800814f8",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-097601cf2c125ffa5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08a638929ef053aff",
            "owner_id": "247518864460",
            "region": "us-east-1",
            "tags": {
              "Name": "First_VPC"
            },
            "tags_all": {
              "Name": "First_VPC"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "247518864460",
            "id": "vpc-097601cf2c125ffa5",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "second_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:247518864460:vpc/vpc-00e2b950650f66e11",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "20.0.0.0/24",
            "default_network_acl_id": "acl-078e3ff674a090fae",
            "default_route_table_id": "rtb-0138b6f5a9022fa5b",
            "default_security_group_id": "sg-02c46cd0a39debbc2",
            "dhcp_options_id": "dopt-0bed20ffd800814f8",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00e2b950650f66e11",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0138b6f5a9022fa5b",
            "owner_id": "247518864460",
            "region": "us-east-1",
            "tags": {
              "Name": "Second_VPC"
            },
            "tags_all": {
              "Name": "Second_VPC"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "247518864460",
            "id": "vpc-00e2b950650f66e11",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}